Fixed Footer Spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -178,3 +178,7 @@ $sponsor-logo-esi-height: 100px;
   padding: 25px;
   height: 150px;
 }
+
+.footer-buffer {
+  height: 30px;
+}
